<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".registro2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titulo"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/titulo1"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/glucosa"
        android:id="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/peso"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/titulo2"
        android:id="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/horassueno"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/inicio"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/calidad"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/titulo3"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/pregunta"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/fiebre"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/resfrio"
        android:id="@+id/textView13"
        android:layout_below="@+id/textView12"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/diarrea"
        android:id="@+id/textView14"
        android:layout_below="@+id/textView13"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/inflamacion"
        android:id="@+id/textView15"
        android:layout_below="@+id/textView14"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnGrabar"
        android:text="Grabar"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/textView15"
        android:layout_toLeftOf="@+id/btnEditar"
        android:gravity="center"
        android:onClick="grabar"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEditar"
        android:text="Editar"
        android:layout_below="@+id/textView15"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"
        android:onClick="eidtar"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAtras"
        android:text="Atrás"
        android:layout_below="@+id/textView15"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@+id/btnEditar"
        android:onClick="atras"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        />


    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NO"
        android:id="@+id/switch1"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SI"
        android:id="@+id/texto1"
        android:textSize="15dp"
        android:paddingTop="3dp"
        android:textColor="#000000"
        android:layout_toRightOf="@+id/switch1"
        android:layout_below="@+id/textView11"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NO"
        android:id="@+id/switch2"
        android:layout_below="@+id/textView12"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SI"
        android:textSize="15dp"
        android:paddingTop="3dp"
        android:textColor="#000000"
        android:id="@+id/texto2"
        android:layout_toRightOf="@+id/switch2"
        android:layout_below="@+id/switch1"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NO"
        android:id="@+id/switch3"
        android:layout_below="@+id/textView13"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SI"
        android:textSize="15dp"
        android:paddingTop="3dp"
        android:textColor="#000000"
        android:id="@+id/texto3"
        android:layout_toRightOf="@+id/switch3"
        android:layout_below="@+id/switch2"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NO"
        android:id="@+id/switch4"
        android:layout_below="@+id/textView14"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SI"
        android:textSize="15dp"
        android:paddingTop="3dp"
        android:textColor="#000000"
        android:id="@+id/texto4"
        android:layout_toRightOf="@+id/switch4"
        android:layout_below="@+id/switch3"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/textView5"
        android:layout_toEndOf="@+id/textView6"
        android:hint="glucosa"
        android:background="#e9e9e9"
        android:elegantTextHeight="false"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:height="80px"
        android:width="210px"
        android:textSize="48px"
        android:textStyle="normal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText1"
        android:layout_above="@+id/textView6"
        android:layout_toEndOf="@+id/textView6"
        android:hint="peso"
        android:background="#e9e9e9"
        android:elegantTextHeight="false"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:height="80px"
        android:width="210px"
        android:textSize="48px"
        android:textStyle="normal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_above="@+id/textView8"
        android:layout_toEndOf="@+id/textView6"
        android:hint="sueño"
        android:background="#e9e9e9"
        android:elegantTextHeight="false"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:height="80px"
        android:width="210px"
        android:textSize="48px"
        android:textStyle="normal" />


    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView9"
        android:layout_toEndOf="@+id/textView6"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:height="75px"
        android:width="210px"
        android:textSize="44px"
        android:textStyle="normal"
        />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView10"
        android:layout_toEndOf="@+id/textView6"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:height="75px"
        android:width="210px"
        android:textSize="44px"
        android:textStyle="normal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="mg/dl"
        android:id="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/editText"
        android:layout_toEndOf="@+id/editText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="kg"
        android:id="@+id/textView16"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="hr"
        android:id="@+id/textView17"
        android:layout_alignTop="@+id/editText2"
        android:layout_toEndOf="@+id/editText2" />



</RelativeLayout>