<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.eduardo.appdiabetes.RegistroDiario">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/titulo3"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/pregunta"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/fiebre"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/resfrio"
        android:id="@+id/textView13"
        android:layout_below="@+id/textView12"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/diarrea"
        android:id="@+id/textView14"
        android:layout_below="@+id/textView13"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/inflamacion"
        android:id="@+id/textView15"
        android:layout_below="@+id/textView14"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp" />




    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NO"
        android:id="@+id/switch1"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SI"
        android:id="@+id/texto1"
        android:textSize="15dp"
        android:paddingTop="3dp"
        android:textColor="#000000"
        android:layout_toRightOf="@+id/switch1"
        android:layout_below="@+id/textView11"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NO"
        android:id="@+id/switch2"
        android:layout_below="@+id/textView12"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SI"
        android:textSize="15dp"
        android:paddingTop="3dp"
        android:textColor="#000000"
        android:id="@+id/texto2"
        android:layout_toRightOf="@+id/switch2"
        android:layout_below="@+id/switch1"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NO"
        android:id="@+id/switch3"
        android:layout_below="@+id/textView13"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SI"
        android:textSize="15dp"
        android:paddingTop="3dp"
        android:textColor="#000000"
        android:id="@+id/texto3"
        android:layout_toRightOf="@+id/switch3"
        android:layout_below="@+id/switch2"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NO"
        android:id="@+id/switch4"
        android:layout_below="@+id/textView14"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SI"
        android:textSize="15dp"
        android:paddingTop="3dp"
        android:textColor="#000000"
        android:id="@+id/texto4"
        android:layout_toRightOf="@+id/switch4"
        android:layout_below="@+id/switch3"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medicación"
        android:id="@+id/txttitulo2"
        android:layout_below="@+id/switch4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Indique si tomó la medicación para diabetes"
        android:id="@+id/txtpreg1"
        android:layout_below="@+id/txttitulo2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="¿Tomó la medicación?"
        android:id="@+id/txtswitch1"
        android:layout_below="@+id/txtpreg1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NO"
        android:id="@+id/switch5"
        android:layout_below="@+id/txtpreg1"
        android:layout_toRightOf="@+id/txtswitch1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SI"
        android:id="@+id/texto5"
        android:textSize="15dp"
        android:paddingTop="3dp"
        android:textColor="#000000"
        android:layout_toRightOf="@+id/switch5"
        android:layout_below="@+id/txtpreg1"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Indique si tomó otra medicación indicada por su médico"
        android:id="@+id/txtpreg2"
        android:layout_below="@+id/texto5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="¿Tomó la medicación?"
        android:id="@+id/txtswitch2"
        android:layout_below="@+id/txtpreg2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NO"
        android:id="@+id/switch6"
        android:layout_below="@+id/txtpreg2"
        android:layout_toRightOf="@+id/txtswitch2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SI"
        android:id="@+id/texto6"
        android:textSize="15dp"
        android:paddingTop="3dp"
        android:textColor="#000000"
        android:layout_toRightOf="@+id/switch6"
        android:layout_below="@+id/txtpreg2"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnGrabar"
        android:text="Grabar"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/texto6"
        android:layout_toLeftOf="@+id/btnEditar"
        android:gravity="center"
        android:onClick="grabar"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEditar"
        android:text="Editar"
        android:layout_below="@+id/texto6"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"
        android:onClick="eidtar"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAtras"
        android:text="Atrás"
        android:layout_below="@+id/texto6"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@+id/btnEditar"
        android:onClick="atras"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
